# spotify-overlay

./: .eslintignore  .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: global.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/@types/: spotify.d.ts
src/components/: CrossfadeImage.tsx
src/context/: authentication.tsx
src/pages/: authenticate.tsx  playback.tsx
